# DataCompass

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPER.md  R1_PLAN.md  SQLBuilderComponents.py  TASK.md  Tasks.md  joblog.md  main.py  pyproject.toml  readme.md  requirements-ci.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
APIManager/: AllAPICaller.py  PromptBuilder.py
APIManager/APIHeads/: ANTHROPIC.json  CLAUDE_CODE.json  CODEX.json  GOOGLE.json  GROQ.json
APIManager/Prompts/: taskGenerateDataframeAPI.txt  taskGeneratePandas.txt  taskGenerateSQL.txt  taskGenerateSparkSQL.txt  taskIngestDataDict.txt  (+2 more)
MetadataManager/: GlossaryStore.py  retrieval_config.YAML
Utilities/: base_utils.py  config.yaml  database_config.YAML  model_config.YAML  retrieval_config.YAML  store_interface.py
backend/: app.py  auth.py  balance.py  executor.py  glossary.py  ingestion.py  logging_config.py  metrics.py  usage_tracker.py
demo/: record_demo.py  record_pages.py
docs/: arch_ingest_flow.md  arch_query_flow.md  arch_storage.md  arch_system.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
tests/: conftest.py  test_adaptive_retrieval.py  test_api.py  test_balance.py  test_base_utils.py  test_failure_scenarios.py  test_filters.py  test_gather_config.py  test_glossary_retrieval.py  test_glossary_store.py  test_ingestion.py  test_input_validation.py  test_kuzu.py  test_lineage.py  test_main_preload.py  test_metrics.py  test_outcome_store.py  test_prompt_builder.py  test_sql_validation.py
validation/: outcome_store.py
(+33 files in other folders)
